# sum_factorization_kernels

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/modules/: FindLikwid.cmake
include/: aligned_vector.h  evaluation_cell_laplacian.h  evaluation_cell_laplacian_no_tiling.h  evaluation_cell_laplacian_no_vec.h  evaluation_cell_laplacian_vec_ele.h  evaluation_dg_laplacian.h  gauss_formula.h  lagrange_polynomials.h  matrix_vector_kernel.h  precomputed_dg_laplacian.h  utilities.h  vectorization.h
scripts/: loadmodules-scalasca.sh  loadmodules.sh
src/: test_dg_integrate.cc  test_dg_precomputed.cc  test_gauss.cc  test_multiplication.cc  test_polynomial.cc  test_program.cc  test_program_vect.cc
